Enhance security in Nginx configuration for Grafana service
This commit enhances the security in the Nginx configuration for the Grafana service. It enables HTTP Strict Transport Security (HSTS) and adds a Content Security Policy (CSP) header to help prevent cross-site scripting (XSS), clickjacking and other code injection attacks. It also uses secure SSL protocols and ciphers. These changes help to improve the overall security of the Grafana service.

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,16 @@ http {
         ssl_certificate /etc/nginx/certs/server.crt;
         ssl_certificate_key /etc/nginx/certs/server.key;
 
+        # Enable HSTS
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+        # Add a Content Security Policy
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; font-src 'self'; object-src 'none'";
+
+        # Use secure SSL protocols and ciphers
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256;
+
         location / {
             proxy_pass http://grafana:3000;
             proxy_set_header Host $host;
